Java class now extracts all data and icons from mods into a tmp folder, which our Python GUI accesses, instead of relying on absolute file paths inside of a mod.jar file. Fixed bugs in regards to enabling/disabling and the Mod Detail panel.